# fcrm_connector

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fcrm_connector/: hooks.py  modules.txt
fcrm_connector/custom_script/: deal.py
fcrm_connector/fixtures/: crm_form_script.json  custom_field.json  property_setter.json
